export const snapshot = {};

snapshot[`compilers/esbuild > Successful JSX build 1`] = `
'// lib/component.jsx
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var Component = () => {
  return /* @__PURE__ */ jsx("div", { children: "Hello" });
};
var component_default = Component;
export {
  component_default as default
};
//# sourceMappingURL=component.jsx.map
'
`;

snapshot[`compilers/esbuild > Import bare module 1`] = `
'// lib/import_node_module.js
import myPackage from "/packages/mypackage/index.js";
import isIp from "/node_modules/.pnpm/is-ip@5.0.0/node_modules/is-ip/index.js";
var import_node_module_default = () => {
  myPackage();
  isIp("?");
};
export {
  import_node_module_default as default
};
//# sourceMappingURL=import_node_module.js.map
'
`;

snapshot[`compilers/esbuild > invalid URL 1`] = `
"/* url:https://unpkg.com/open-props@1.5.3/red.min.css */
:where(html) {
  --red-0:#fff5f5;
  --red-1:#ffe3e3;
  --red-2:#ffc9c9;
  --red-3:#ffa8a8;
  --red-4:#ff8787;
  --red-5:#ff6b6b;
  --red-6:#fa5252;
  --red-7:#f03e3e;
  --red-8:#e03131;
  --red-9:#c92a2a;
  --red-10:#b02525;
  --red-11:#962020;
  --red-12:#7d1a1a;
}
/*# sourceMappingURL=/url:https%3A%2F%2Funpkg.com%2Fopen-props%401.5.3%2Fred.min.css.map */
"
`;

snapshot[`compilers/esbuild > allows returns error on unknown bare module 1`] = `
{
  detail: undefined,
  id: "",
  location: {
    column: 20,
    file: "lib/import_unknown_node_module.js",
    length: 9,
    line: 1,
    lineText: "import unknown from 'unknown'",
    namespace: "",
    suggestion: "",
  },
  notes: [
    {
      location: null,
      text: 'You can mark the path "unknown" as external to exclude it from the bundle, which will remove this error.',
    },
  ],
  pluginName: "resolve",
  text: 'Could not resolve "unknown"',
}
`;

snapshot[`compilers/esbuild > resolves nested node modules 1`] = `
'// node_modules/.pnpm/@react-aria+button@3.6.3_react@18.2.0/node_modules/@react-aria/button/dist/module.js
import { mergeProps as \$cE0pI\$mergeProps, filterDOMProps as \$cE0pI\$filterDOMProps, chain as \$cE0pI\$chain } from "/node_modules/.pnpm/@react-aria+utils@3.14.1_react@18.2.0/node_modules/@react-aria/utils/dist/module.js";
import { useFocusable as \$cE0pI\$useFocusable } from "/node_modules/.pnpm/@react-aria+focus@3.10.0_react@18.2.0/node_modules/@react-aria/focus/dist/module.js";
import { usePress as \$cE0pI\$usePress } from "/node_modules/.pnpm/@react-aria+interactions@3.13.0_react@18.2.0/node_modules/@react-aria/interactions/dist/module.js";
function \$701a24aa0da5b062\$export\$ea18c227d4417cc3(props, ref) {
  let {
    elementType = "button",
    isDisabled,
    onPress,
    onPressStart,
    onPressEnd,
    onPressChange,
    preventFocusOnPress,
    allowFocusWhenDisabled,
    onClick: deprecatedOnClick,
    href,
    target,
    rel,
    type = "button"
  } = props;
  let additionalProps;
  if (elementType === "button")
    additionalProps = {
      type,
      disabled: isDisabled
    };
  else
    additionalProps = {
      role: "button",
      tabIndex: isDisabled ? void 0 : 0,
      href: elementType === "a" && isDisabled ? void 0 : href,
      target: elementType === "a" ? target : void 0,
      type: elementType === "input" ? type : void 0,
      disabled: elementType === "input" ? isDisabled : void 0,
      "aria-disabled": !isDisabled || elementType === "input" ? void 0 : isDisabled,
      rel: elementType === "a" ? rel : void 0
    };
  let { pressProps, isPressed } = \$cE0pI\$usePress({
    onPressStart,
    onPressEnd,
    onPressChange,
    onPress,
    isDisabled,
    preventFocusOnPress,
    ref
  });
  let { focusableProps } = \$cE0pI\$useFocusable(props, ref);
  if (allowFocusWhenDisabled)
    focusableProps.tabIndex = isDisabled ? -1 : focusableProps.tabIndex;
  let buttonProps = \$cE0pI\$mergeProps(focusableProps, pressProps, \$cE0pI\$filterDOMProps(props, {
    labelable: true
  }));
  return {
    isPressed,
    buttonProps: \$cE0pI\$mergeProps(additionalProps, buttonProps, {
      "aria-haspopup": props["aria-haspopup"],
      "aria-expanded": props["aria-expanded"],
      "aria-controls": props["aria-controls"],
      "aria-pressed": props["aria-pressed"],
      onClick: (e) => {
        if (deprecatedOnClick) {
          deprecatedOnClick(e);
          console.warn("onClick is deprecated, please use onPress");
        }
      }
    })
  };
}
function \$55f54f7887471b58\$export\$51e84d46ca0bc451(props, state, ref) {
  const { isSelected } = state;
  const { isPressed, buttonProps } = \$701a24aa0da5b062\$export\$ea18c227d4417cc3({
    ...props,
    onPress: \$cE0pI\$chain(state.toggle, props.onPress)
  }, ref);
  return {
    isPressed,
    buttonProps: \$cE0pI\$mergeProps(buttonProps, {
      "aria-pressed": isSelected
    })
  };
}
export {
  \$701a24aa0da5b062\$export\$ea18c227d4417cc3 as useButton,
  \$55f54f7887471b58\$export\$51e84d46ca0bc451 as useToggleButton
};
//# sourceMappingURL=button.js.map
'
`;

snapshot[`compilers/esbuild > Import relative module 1`] = `
'// lib/import_relative_module.js
import foo4 from "/lib/foo4.js";
foo4();
//# sourceMappingURL=import_relative_module.js.map
'
`;

snapshot[`compilers/esbuild > Import absolute module 1`] = `
'// lib/import_absolute_module.js
import foo4 from "/lib/foo4.js";
foo4();
//# sourceMappingURL=import_absolute_module.js.map
'
`;

snapshot[`compilers/esbuild > Import remote module 1`] = `
'// lib/import_remote_module.js
import emailRegex from "/url:https%3A%2F%2Fesm.sh%2Femail-regex";
//# sourceMappingURL=import_remote_module.js.map
'
`;

snapshot[`compilers/esbuild > npm module with relative import 1`] = `
'// node_modules/.pnpm/is-ip@5.0.0/node_modules/is-ip/index.js
import ipRegex from "/node_modules/.pnpm/ip-regex@5.0.0/node_modules/ip-regex/index.js";
import { isMatch } from "/node_modules/.pnpm/super-regex@0.2.0/node_modules/super-regex/index.js";
var maxIPv6Length = 45;
var options = {
  timeout: 400
};
function isIP(string) {
  return isMatch(ipRegex({ exact: true }), string.slice(0, maxIPv6Length), options);
}

// lib/npm_module_with_relative_import.js
isIP();
//# sourceMappingURL=npm_module_with_relative_import.js.map
'
`;

snapshot[`compilers/esbuild > Import relative module without extension 1`] = `
'// lib/import_relative_module_without_extension.js
import foo from "/lib/foo.js";
//# sourceMappingURL=import_relative_module_without_extension.js.map
'
`;

snapshot[`compilers/esbuild > Import absolute module without extension 1`] = `
'// lib/import_absolute_module_without_extension.js
import foo from "/lib/foo.js";
//# sourceMappingURL=import_absolute_module_without_extension.js.map
'
`;

snapshot[`compilers/esbuild > Import css module from JS 1`] = `
'// lib/styles.module.css
var e = document.querySelector("#_9095c7b8");
if (!e) {
  e = document.createElement("style");
  e.id = "_9095c7b8";
  document.head.appendChild(e);
  e.appendChild(document.createComment("/lib/styles.module.css"));
  e.appendChild(document.createTextNode(\`.myClass9095c7b8{color:pink}\`));
}
var styles_module_default = { "myClass": "myClass9095c7b8" };

// lib/import_css_module.js
console.log(styles_module_default);
//# sourceMappingURL=import_css_module.js.map
'
`;

snapshot[`compilers/esbuild > de-dupes side loaded ViewComponent default stylesheet - regular 1`] = `
'// app/components/basic_react_component.module.css
var basic_react_component_module_default = new Proxy({}, { get(target, prop, receiver) {
  if (prop in target || typeof prop === "symbol") {
    return Reflect.get(target, prop, receiver);
  } else {
    return prop + "454467aa";
  }
} });

// app/components/basic_react_component.jsx
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var basic_react_component_default = () => {
  return /* @__PURE__ */ jsx("div", { className: basic_react_component_module_default.base, children: "Basic React Component" });
};
export {
  basic_react_component_default as default
};
//# sourceMappingURL=basic_react_component.jsx.map
'
`;

snapshot[`compilers/esbuild > de-dupes side loaded ViewComponent default stylesheet - sidecar 1`] = `
'// app/components/basic_react/component.module.css
var component_module_default = new Proxy({}, { get(target, prop, receiver) {
  if (prop in target || typeof prop === "symbol") {
    return Reflect.get(target, prop, receiver);
  } else {
    return prop + "86cfc182";
  }
} });

// app/components/basic_react/component.jsx
import { jsx } from "/node_modules/.pnpm/react@18.2.0/node_modules/react/jsx-runtime.js";
var component_default = () => {
  return /* @__PURE__ */ jsx("div", { className: component_module_default.base, children: "Basic React Component" });
};
export {
  component_default as default
};
//# sourceMappingURL=component.jsx.map
'
`;

snapshot[`compilers/esbuild > Import css from JS 1`] = `
'// app/views/layouts/application.css
var e = document.querySelector("#_16bcb75e");
if (!e) {
  e = document.createElement("style");
  e.id = "_16bcb75e";
  document.head.appendChild(e);
  e.appendChild(document.createComment("/app/views/layouts/application.css"));
  e.appendChild(document.createTextNode(\`body{color:pink}.name{color:#000}
\`));
}
//# sourceMappingURL=import_css.js.map
'
`;

snapshot[`compilers/esbuild > Import css from jsx 1`] = `
'// app/views/layouts/application.css
var e = document.querySelector("#_16bcb75e");
if (!e) {
  e = document.createElement("style");
  e.id = "_16bcb75e";
  document.head.appendChild(e);
  e.appendChild(document.createComment("/app/views/layouts/application.css"));
  e.appendChild(document.createTextNode(\`body{color:pink}.name{color:#000}
\`));
}
//# sourceMappingURL=import_css.jsx.map
'
`;

snapshot[`compilers/esbuild > postcss > supports mixins 1`] = `
"/* lib/with_mixins.css */
a {
  color: red;
  font-size: 20px;
}
button {
  color: pink;
  font-size: 14px;
}
button span {
  margin: 10px;
}
/*# sourceMappingURL=with_mixins.css.map */
"
`;

snapshot[`compilers/esbuild > postcss > cssMixinPaths option 1`] = `
"/* lib/with_mixins_from_alternative_path.css */
a {
  color: red;
  font-size: 20px;
}
button {
  padding: 20px;
  font-size: 30px;
}
/*# sourceMappingURL=with_mixins_from_alternative_path.css.map */
"
`;
